parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABIERTO
    CERRADO
    COMA
    COMILLAS
    GATO
    HACER
    LLAVE_ABIERTA
    LLAVE_CERRADA
    MENOR
    MIENTRAS
    PARA
    PUNTO

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> <empty>
Rule 5     statement -> variable_declaration
Rule 6     statement -> assignment_statement
Rule 7     statement -> condition_statement
Rule 8     statement -> increment_statement
Rule 9     statement -> condition
Rule 10    statement -> print_statement
Rule 11    statement -> suma_statement
Rule 12    statement -> resta_statement
Rule 13    statement -> product_statement
Rule 14    statement -> division_statement
Rule 15    variable_declaration -> DECLARACION INT IDENTIFICADOR NUMERO PUNTO_Y_COMA
Rule 16    variable_declaration -> DECLARACION INT IDENTIFICADOR PUNTO_Y_COMA
Rule 17    variable_declaration -> DECLARACION FLOAT IDENTIFICADOR NUMERO PUNTO_Y_COMA
Rule 18    variable_declaration -> DECLARACION STRING IDENTIFICADOR CADENA PUNTO_Y_COMA
Rule 19    suma_statement -> ALMACENAR EN IDENTIFICADOR SUMATORIA IDENTIFICADOR MAS IDENTIFICADOR PUNTO_Y_COMA
Rule 20    suma_statement -> ALMACENAR EN IDENTIFICADOR SUMATORIA NUMERO MAS IDENTIFICADOR PUNTO_Y_COMA
Rule 21    suma_statement -> ALMACENAR EN IDENTIFICADOR SUMATORIA IDENTIFICADOR MAS NUMERO PUNTO_Y_COMA
Rule 22    suma_statement -> ALMACENAR EN IDENTIFICADOR SUMATORIA NUMERO MAS NUMERO PUNTO_Y_COMA
Rule 23    resta_statement -> ALMACENAR EN IDENTIFICADOR SUBSTRACTION IDENTIFICADOR RESTA IDENTIFICADOR PUNTO_Y_COMA
Rule 24    resta_statement -> ALMACENAR EN IDENTIFICADOR SUBSTRACTION NUMERO RESTA IDENTIFICADOR PUNTO_Y_COMA
Rule 25    resta_statement -> ALMACENAR EN IDENTIFICADOR SUBSTRACTION IDENTIFICADOR RESTA NUMERO PUNTO_Y_COMA
Rule 26    resta_statement -> ALMACENAR EN IDENTIFICADOR SUBSTRACTION NUMERO RESTA NUMERO PUNTO_Y_COMA
Rule 27    product_statement -> ALMACENAR EN IDENTIFICADOR PRODUCTO IDENTIFICADOR POR IDENTIFICADOR PUNTO_Y_COMA
Rule 28    product_statement -> ALMACENAR EN IDENTIFICADOR PRODUCTO NUMERO POR IDENTIFICADOR PUNTO_Y_COMA
Rule 29    product_statement -> ALMACENAR EN IDENTIFICADOR PRODUCTO IDENTIFICADOR POR NUMERO PUNTO_Y_COMA
Rule 30    product_statement -> ALMACENAR EN IDENTIFICADOR PRODUCTO NUMERO POR NUMERO PUNTO_Y_COMA
Rule 31    division_statement -> ALMACENAR EN IDENTIFICADOR DIVISION IDENTIFICADOR DIVISION IDENTIFICADOR PUNTO_Y_COMA
Rule 32    division_statement -> ALMACENAR EN IDENTIFICADOR DIVISION NUMERO DIVISION IDENTIFICADOR PUNTO_Y_COMA
Rule 33    division_statement -> ALMACENAR EN IDENTIFICADOR DIVISION IDENTIFICADOR DIVISION NUMERO PUNTO_Y_COMA
Rule 34    division_statement -> ALMACENAR EN IDENTIFICADOR DIVISION NUMERO DIVISION NUMERO PUNTO_Y_COMA
Rule 35    print_statement -> PRESENTAR IDENTIFICADOR EN CONSOLA PUNTO_Y_COMA
Rule 36    print_statement -> PRESENTAR EN CONSOLA CADENA PUNTO_Y_COMA
Rule 37    condition -> INT IDENTIFICADOR IGUAL IGUAL NUMERO
Rule 38    condition -> IDENTIFICADOR IGUAL IGUAL NUMERO
Rule 39    assignment_statement -> IDENTIFICADOR IGUAL NUMERO
Rule 40    assignment_statement -> IDENTIFICADOR IGUAL IDENTIFICADOR MAS IDENTIFICADOR
Rule 41    condition_statement -> IDENTIFICADOR MENOR_IGUAL NUMERO
Rule 42    condition_statement -> IDENTIFICADOR IGUAL IGUAL NUMERO
Rule 43    condition_statement -> IDENTIFICADOR MAYOR NUMERO
Rule 44    condition_statement -> IDENTIFICADOR MAYOR_IGUAL NUMERO
Rule 45    increment_statement -> IDENTIFICADOR MAS MAS
Rule 46    increment_statement -> IDENTIFICADOR MAS_IGUAL NUMERO

Terminals, with rules where they appear

ABIERTO              : 
ALMACENAR            : 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34
CADENA               : 18 36
CERRADO              : 
COMA                 : 
COMILLAS             : 
CONSOLA              : 35 36
DECLARACION          : 15 16 17 18
DIVISION             : 31 31 32 32 33 33 34 34
EN                   : 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
FLOAT                : 17
GATO                 : 
HACER                : 
IDENTIFICADOR        : 15 16 17 18 19 19 19 20 20 21 21 22 23 23 23 24 24 25 25 26 27 27 27 28 28 29 29 30 31 31 31 32 32 33 33 34 35 37 38 39 40 40 40 41 42 43 44 45 46
IGUAL                : 37 37 38 38 39 40 42 42
INT                  : 15 16 37
LLAVE_ABIERTA        : 
LLAVE_CERRADA        : 
MAS                  : 19 20 21 22 40 45 45
MAS_IGUAL            : 46
MAYOR                : 43
MAYOR_IGUAL          : 44
MENOR                : 
MENOR_IGUAL          : 41
MIENTRAS             : 
NUMERO               : 15 17 20 21 22 22 24 25 26 26 28 29 30 30 32 33 34 34 37 38 39 41 42 43 44 46
PARA                 : 
POR                  : 27 28 29 30
PRESENTAR            : 35 36
PRODUCTO             : 27 28 29 30
PUNTO                : 
PUNTO_Y_COMA         : 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
RESTA                : 23 24 25 26
STRING               : 18
SUBSTRACTION         : 23 24 25 26
SUMATORIA            : 19 20 21 22
error                : 

Nonterminals, with rules where they appear

assignment_statement : 6
condition            : 9
condition_statement  : 7
division_statement   : 14
increment_statement  : 8
print_statement      : 10
product_statement    : 13
program              : 0
resta_statement      : 12
statement            : 2 3
statement_list       : 1 3
suma_statement       : 11
variable_declaration : 5

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> .
    (5) statement -> . variable_declaration
    (6) statement -> . assignment_statement
    (7) statement -> . condition_statement
    (8) statement -> . increment_statement
    (9) statement -> . condition
    (10) statement -> . print_statement
    (11) statement -> . suma_statement
    (12) statement -> . resta_statement
    (13) statement -> . product_statement
    (14) statement -> . division_statement
    (15) variable_declaration -> . DECLARACION INT IDENTIFICADOR NUMERO PUNTO_Y_COMA
    (16) variable_declaration -> . DECLARACION INT IDENTIFICADOR PUNTO_Y_COMA
    (17) variable_declaration -> . DECLARACION FLOAT IDENTIFICADOR NUMERO PUNTO_Y_COMA
    (18) variable_declaration -> . DECLARACION STRING IDENTIFICADOR CADENA PUNTO_Y_COMA
    (39) assignment_statement -> . IDENTIFICADOR IGUAL NUMERO
    (40) assignment_statement -> . IDENTIFICADOR IGUAL IDENTIFICADOR MAS IDENTIFICADOR
    (41) condition_statement -> . IDENTIFICADOR MENOR_IGUAL NUMERO
    (42) condition_statement -> . IDENTIFICADOR IGUAL IGUAL NUMERO
    (43) condition_statement -> . IDENTIFICADOR MAYOR NUMERO
    (44) condition_statement -> . IDENTIFICADOR MAYOR_IGUAL NUMERO
    (45) increment_statement -> . IDENTIFICADOR MAS MAS
    (46) increment_statement -> . IDENTIFICADOR MAS_IGUAL NUMERO
    (37) condition -> . INT IDENTIFICADOR IGUAL IGUAL NUMERO
    (38) condition -> . IDENTIFICADOR IGUAL IGUAL NUMERO
    (35) print_statement -> . PRESENTAR IDENTIFICADOR EN CONSOLA PUNTO_Y_COMA
    (36) print_statement -> . PRESENTAR EN CONSOLA CADENA PUNTO_Y_COMA
    (19) suma_statement -> . ALMACENAR EN IDENTIFICADOR SUMATORIA IDENTIFICADOR MAS IDENTIFICADOR PUNTO_Y_COMA
    (20) suma_statement -> . ALMACENAR EN IDENTIFICADOR SUMATORIA NUMERO MAS IDENTIFICADOR PUNTO_Y_COMA
    (21) suma_statement -> . ALMACENAR EN IDENTIFICADOR SUMATORIA IDENTIFICADOR MAS NUMERO PUNTO_Y_COMA
    (22) suma_statement -> . ALMACENAR EN IDENTIFICADOR SUMATORIA NUMERO MAS NUMERO PUNTO_Y_COMA
    (23) resta_statement -> . ALMACENAR EN IDENTIFICADOR SUBSTRACTION IDENTIFICADOR RESTA IDENTIFICADOR PUNTO_Y_COMA
    (24) resta_statement -> . ALMACENAR EN IDENTIFICADOR SUBSTRACTION NUMERO RESTA IDENTIFICADOR PUNTO_Y_COMA
    (25) resta_statement -> . ALMACENAR EN IDENTIFICADOR SUBSTRACTION IDENTIFICADOR RESTA NUMERO PUNTO_Y_COMA
    (26) resta_statement -> . ALMACENAR EN IDENTIFICADOR SUBSTRACTION NUMERO RESTA NUMERO PUNTO_Y_COMA
    (27) product_statement -> . ALMACENAR EN IDENTIFICADOR PRODUCTO IDENTIFICADOR POR IDENTIFICADOR PUNTO_Y_COMA
    (28) product_statement -> . ALMACENAR EN IDENTIFICADOR PRODUCTO NUMERO POR IDENTIFICADOR PUNTO_Y_COMA
    (29) product_statement -> . ALMACENAR EN IDENTIFICADOR PRODUCTO IDENTIFICADOR POR NUMERO PUNTO_Y_COMA
    (30) product_statement -> . ALMACENAR EN IDENTIFICADOR PRODUCTO NUMERO POR NUMERO PUNTO_Y_COMA
    (31) division_statement -> . ALMACENAR EN IDENTIFICADOR DIVISION IDENTIFICADOR DIVISION IDENTIFICADOR PUNTO_Y_COMA
    (32) division_statement -> . ALMACENAR EN IDENTIFICADOR DIVISION NUMERO DIVISION IDENTIFICADOR PUNTO_Y_COMA
    (33) division_statement -> . ALMACENAR EN IDENTIFICADOR DIVISION IDENTIFICADOR DIVISION NUMERO PUNTO_Y_COMA
    (34) division_statement -> . ALMACENAR EN IDENTIFICADOR DIVISION NUMERO DIVISION NUMERO PUNTO_Y_COMA

  ! shift/reduce conflict for DECLARACION resolved as shift
  ! shift/reduce conflict for IDENTIFICADOR resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for PRESENTAR resolved as shift
  ! shift/reduce conflict for ALMACENAR resolved as shift
    $end            reduce using rule 4 (statement -> .)
    DECLARACION     shift and go to state 14
    IDENTIFICADOR   shift and go to state 16
    INT             shift and go to state 15
    PRESENTAR       shift and go to state 17
    ALMACENAR       shift and go to state 18

  ! DECLARACION     [ reduce using rule 4 (statement -> .) ]
  ! IDENTIFICADOR   [ reduce using rule 4 (statement -> .) ]
  ! INT             [ reduce using rule 4 (statement -> .) ]
  ! PRESENTAR       [ reduce using rule 4 (statement -> .) ]
  ! ALMACENAR       [ reduce using rule 4 (statement -> .) ]

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    variable_declaration           shift and go to state 4
    assignment_statement           shift and go to state 5
    condition_statement            shift and go to state 6
    increment_statement            shift and go to state 7
    condition                      shift and go to state 8
    print_statement                shift and go to state 9
    suma_statement                 shift and go to state 10
    resta_statement                shift and go to state 11
    product_statement              shift and go to state 12
    division_statement             shift and go to state 13

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (4) statement -> .
    (5) statement -> . variable_declaration
    (6) statement -> . assignment_statement
    (7) statement -> . condition_statement
    (8) statement -> . increment_statement
    (9) statement -> . condition
    (10) statement -> . print_statement
    (11) statement -> . suma_statement
    (12) statement -> . resta_statement
    (13) statement -> . product_statement
    (14) statement -> . division_statement
    (15) variable_declaration -> . DECLARACION INT IDENTIFICADOR NUMERO PUNTO_Y_COMA
    (16) variable_declaration -> . DECLARACION INT IDENTIFICADOR PUNTO_Y_COMA
    (17) variable_declaration -> . DECLARACION FLOAT IDENTIFICADOR NUMERO PUNTO_Y_COMA
    (18) variable_declaration -> . DECLARACION STRING IDENTIFICADOR CADENA PUNTO_Y_COMA
    (39) assignment_statement -> . IDENTIFICADOR IGUAL NUMERO
    (40) assignment_statement -> . IDENTIFICADOR IGUAL IDENTIFICADOR MAS IDENTIFICADOR
    (41) condition_statement -> . IDENTIFICADOR MENOR_IGUAL NUMERO
    (42) condition_statement -> . IDENTIFICADOR IGUAL IGUAL NUMERO
    (43) condition_statement -> . IDENTIFICADOR MAYOR NUMERO
    (44) condition_statement -> . IDENTIFICADOR MAYOR_IGUAL NUMERO
    (45) increment_statement -> . IDENTIFICADOR MAS MAS
    (46) increment_statement -> . IDENTIFICADOR MAS_IGUAL NUMERO
    (37) condition -> . INT IDENTIFICADOR IGUAL IGUAL NUMERO
    (38) condition -> . IDENTIFICADOR IGUAL IGUAL NUMERO
    (35) print_statement -> . PRESENTAR IDENTIFICADOR EN CONSOLA PUNTO_Y_COMA
    (36) print_statement -> . PRESENTAR EN CONSOLA CADENA PUNTO_Y_COMA
    (19) suma_statement -> . ALMACENAR EN IDENTIFICADOR SUMATORIA IDENTIFICADOR MAS IDENTIFICADOR PUNTO_Y_COMA
    (20) suma_statement -> . ALMACENAR EN IDENTIFICADOR SUMATORIA NUMERO MAS IDENTIFICADOR PUNTO_Y_COMA
    (21) suma_statement -> . ALMACENAR EN IDENTIFICADOR SUMATORIA IDENTIFICADOR MAS NUMERO PUNTO_Y_COMA
    (22) suma_statement -> . ALMACENAR EN IDENTIFICADOR SUMATORIA NUMERO MAS NUMERO PUNTO_Y_COMA
    (23) resta_statement -> . ALMACENAR EN IDENTIFICADOR SUBSTRACTION IDENTIFICADOR RESTA IDENTIFICADOR PUNTO_Y_COMA
    (24) resta_statement -> . ALMACENAR EN IDENTIFICADOR SUBSTRACTION NUMERO RESTA IDENTIFICADOR PUNTO_Y_COMA
    (25) resta_statement -> . ALMACENAR EN IDENTIFICADOR SUBSTRACTION IDENTIFICADOR RESTA NUMERO PUNTO_Y_COMA
    (26) resta_statement -> . ALMACENAR EN IDENTIFICADOR SUBSTRACTION NUMERO RESTA NUMERO PUNTO_Y_COMA
    (27) product_statement -> . ALMACENAR EN IDENTIFICADOR PRODUCTO IDENTIFICADOR POR IDENTIFICADOR PUNTO_Y_COMA
    (28) product_statement -> . ALMACENAR EN IDENTIFICADOR PRODUCTO NUMERO POR IDENTIFICADOR PUNTO_Y_COMA
    (29) product_statement -> . ALMACENAR EN IDENTIFICADOR PRODUCTO IDENTIFICADOR POR NUMERO PUNTO_Y_COMA
    (30) product_statement -> . ALMACENAR EN IDENTIFICADOR PRODUCTO NUMERO POR NUMERO PUNTO_Y_COMA
    (31) division_statement -> . ALMACENAR EN IDENTIFICADOR DIVISION IDENTIFICADOR DIVISION IDENTIFICADOR PUNTO_Y_COMA
    (32) division_statement -> . ALMACENAR EN IDENTIFICADOR DIVISION NUMERO DIVISION IDENTIFICADOR PUNTO_Y_COMA
    (33) division_statement -> . ALMACENAR EN IDENTIFICADOR DIVISION IDENTIFICADOR DIVISION NUMERO PUNTO_Y_COMA
    (34) division_statement -> . ALMACENAR EN IDENTIFICADOR DIVISION NUMERO DIVISION NUMERO PUNTO_Y_COMA

  ! reduce/reduce conflict for $end resolved using rule 1 (program -> statement_list .)
  ! shift/reduce conflict for DECLARACION resolved as shift
  ! shift/reduce conflict for IDENTIFICADOR resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for PRESENTAR resolved as shift
  ! shift/reduce conflict for ALMACENAR resolved as shift
    $end            reduce using rule 1 (program -> statement_list .)
    DECLARACION     shift and go to state 14
    IDENTIFICADOR   shift and go to state 16
    INT             shift and go to state 15
    PRESENTAR       shift and go to state 17
    ALMACENAR       shift and go to state 18

  ! DECLARACION     [ reduce using rule 4 (statement -> .) ]
  ! IDENTIFICADOR   [ reduce using rule 4 (statement -> .) ]
  ! INT             [ reduce using rule 4 (statement -> .) ]
  ! PRESENTAR       [ reduce using rule 4 (statement -> .) ]
  ! ALMACENAR       [ reduce using rule 4 (statement -> .) ]
  ! $end            [ reduce using rule 4 (statement -> .) ]

    statement                      shift and go to state 19
    variable_declaration           shift and go to state 4
    assignment_statement           shift and go to state 5
    condition_statement            shift and go to state 6
    increment_statement            shift and go to state 7
    condition                      shift and go to state 8
    print_statement                shift and go to state 9
    suma_statement                 shift and go to state 10
    resta_statement                shift and go to state 11
    product_statement              shift and go to state 12
    division_statement             shift and go to state 13

state 3

    (2) statement_list -> statement .

    DECLARACION     reduce using rule 2 (statement_list -> statement .)
    IDENTIFICADOR   reduce using rule 2 (statement_list -> statement .)
    INT             reduce using rule 2 (statement_list -> statement .)
    PRESENTAR       reduce using rule 2 (statement_list -> statement .)
    ALMACENAR       reduce using rule 2 (statement_list -> statement .)
    $end            reduce using rule 2 (statement_list -> statement .)


state 4

    (5) statement -> variable_declaration .

    DECLARACION     reduce using rule 5 (statement -> variable_declaration .)
    IDENTIFICADOR   reduce using rule 5 (statement -> variable_declaration .)
    INT             reduce using rule 5 (statement -> variable_declaration .)
    PRESENTAR       reduce using rule 5 (statement -> variable_declaration .)
    ALMACENAR       reduce using rule 5 (statement -> variable_declaration .)
    $end            reduce using rule 5 (statement -> variable_declaration .)


state 5

    (6) statement -> assignment_statement .

    DECLARACION     reduce using rule 6 (statement -> assignment_statement .)
    IDENTIFICADOR   reduce using rule 6 (statement -> assignment_statement .)
    INT             reduce using rule 6 (statement -> assignment_statement .)
    PRESENTAR       reduce using rule 6 (statement -> assignment_statement .)
    ALMACENAR       reduce using rule 6 (statement -> assignment_statement .)
    $end            reduce using rule 6 (statement -> assignment_statement .)


state 6

    (7) statement -> condition_statement .

    DECLARACION     reduce using rule 7 (statement -> condition_statement .)
    IDENTIFICADOR   reduce using rule 7 (statement -> condition_statement .)
    INT             reduce using rule 7 (statement -> condition_statement .)
    PRESENTAR       reduce using rule 7 (statement -> condition_statement .)
    ALMACENAR       reduce using rule 7 (statement -> condition_statement .)
    $end            reduce using rule 7 (statement -> condition_statement .)


state 7

    (8) statement -> increment_statement .

    DECLARACION     reduce using rule 8 (statement -> increment_statement .)
    IDENTIFICADOR   reduce using rule 8 (statement -> increment_statement .)
    INT             reduce using rule 8 (statement -> increment_statement .)
    PRESENTAR       reduce using rule 8 (statement -> increment_statement .)
    ALMACENAR       reduce using rule 8 (statement -> increment_statement .)
    $end            reduce using rule 8 (statement -> increment_statement .)


state 8

    (9) statement -> condition .

    DECLARACION     reduce using rule 9 (statement -> condition .)
    IDENTIFICADOR   reduce using rule 9 (statement -> condition .)
    INT             reduce using rule 9 (statement -> condition .)
    PRESENTAR       reduce using rule 9 (statement -> condition .)
    ALMACENAR       reduce using rule 9 (statement -> condition .)
    $end            reduce using rule 9 (statement -> condition .)


state 9

    (10) statement -> print_statement .

    DECLARACION     reduce using rule 10 (statement -> print_statement .)
    IDENTIFICADOR   reduce using rule 10 (statement -> print_statement .)
    INT             reduce using rule 10 (statement -> print_statement .)
    PRESENTAR       reduce using rule 10 (statement -> print_statement .)
    ALMACENAR       reduce using rule 10 (statement -> print_statement .)
    $end            reduce using rule 10 (statement -> print_statement .)


state 10

    (11) statement -> suma_statement .

    DECLARACION     reduce using rule 11 (statement -> suma_statement .)
    IDENTIFICADOR   reduce using rule 11 (statement -> suma_statement .)
    INT             reduce using rule 11 (statement -> suma_statement .)
    PRESENTAR       reduce using rule 11 (statement -> suma_statement .)
    ALMACENAR       reduce using rule 11 (statement -> suma_statement .)
    $end            reduce using rule 11 (statement -> suma_statement .)


state 11

    (12) statement -> resta_statement .

    DECLARACION     reduce using rule 12 (statement -> resta_statement .)
    IDENTIFICADOR   reduce using rule 12 (statement -> resta_statement .)
    INT             reduce using rule 12 (statement -> resta_statement .)
    PRESENTAR       reduce using rule 12 (statement -> resta_statement .)
    ALMACENAR       reduce using rule 12 (statement -> resta_statement .)
    $end            reduce using rule 12 (statement -> resta_statement .)


state 12

    (13) statement -> product_statement .

    DECLARACION     reduce using rule 13 (statement -> product_statement .)
    IDENTIFICADOR   reduce using rule 13 (statement -> product_statement .)
    INT             reduce using rule 13 (statement -> product_statement .)
    PRESENTAR       reduce using rule 13 (statement -> product_statement .)
    ALMACENAR       reduce using rule 13 (statement -> product_statement .)
    $end            reduce using rule 13 (statement -> product_statement .)


state 13

    (14) statement -> division_statement .

    DECLARACION     reduce using rule 14 (statement -> division_statement .)
    IDENTIFICADOR   reduce using rule 14 (statement -> division_statement .)
    INT             reduce using rule 14 (statement -> division_statement .)
    PRESENTAR       reduce using rule 14 (statement -> division_statement .)
    ALMACENAR       reduce using rule 14 (statement -> division_statement .)
    $end            reduce using rule 14 (statement -> division_statement .)


state 14

    (15) variable_declaration -> DECLARACION . INT IDENTIFICADOR NUMERO PUNTO_Y_COMA
    (16) variable_declaration -> DECLARACION . INT IDENTIFICADOR PUNTO_Y_COMA
    (17) variable_declaration -> DECLARACION . FLOAT IDENTIFICADOR NUMERO PUNTO_Y_COMA
    (18) variable_declaration -> DECLARACION . STRING IDENTIFICADOR CADENA PUNTO_Y_COMA

    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    STRING          shift and go to state 22


state 15

    (37) condition -> INT . IDENTIFICADOR IGUAL IGUAL NUMERO

    IDENTIFICADOR   shift and go to state 23


state 16

    (39) assignment_statement -> IDENTIFICADOR . IGUAL NUMERO
    (40) assignment_statement -> IDENTIFICADOR . IGUAL IDENTIFICADOR MAS IDENTIFICADOR
    (41) condition_statement -> IDENTIFICADOR . MENOR_IGUAL NUMERO
    (42) condition_statement -> IDENTIFICADOR . IGUAL IGUAL NUMERO
    (43) condition_statement -> IDENTIFICADOR . MAYOR NUMERO
    (44) condition_statement -> IDENTIFICADOR . MAYOR_IGUAL NUMERO
    (45) increment_statement -> IDENTIFICADOR . MAS MAS
    (46) increment_statement -> IDENTIFICADOR . MAS_IGUAL NUMERO
    (38) condition -> IDENTIFICADOR . IGUAL IGUAL NUMERO

    IGUAL           shift and go to state 24
    MENOR_IGUAL     shift and go to state 26
    MAYOR           shift and go to state 27
    MAYOR_IGUAL     shift and go to state 28
    MAS             shift and go to state 25
    MAS_IGUAL       shift and go to state 29


state 17

    (35) print_statement -> PRESENTAR . IDENTIFICADOR EN CONSOLA PUNTO_Y_COMA
    (36) print_statement -> PRESENTAR . EN CONSOLA CADENA PUNTO_Y_COMA

    IDENTIFICADOR   shift and go to state 30
    EN              shift and go to state 31


state 18

    (19) suma_statement -> ALMACENAR . EN IDENTIFICADOR SUMATORIA IDENTIFICADOR MAS IDENTIFICADOR PUNTO_Y_COMA
    (20) suma_statement -> ALMACENAR . EN IDENTIFICADOR SUMATORIA NUMERO MAS IDENTIFICADOR PUNTO_Y_COMA
    (21) suma_statement -> ALMACENAR . EN IDENTIFICADOR SUMATORIA IDENTIFICADOR MAS NUMERO PUNTO_Y_COMA
    (22) suma_statement -> ALMACENAR . EN IDENTIFICADOR SUMATORIA NUMERO MAS NUMERO PUNTO_Y_COMA
    (23) resta_statement -> ALMACENAR . EN IDENTIFICADOR SUBSTRACTION IDENTIFICADOR RESTA IDENTIFICADOR PUNTO_Y_COMA
    (24) resta_statement -> ALMACENAR . EN IDENTIFICADOR SUBSTRACTION NUMERO RESTA IDENTIFICADOR PUNTO_Y_COMA
    (25) resta_statement -> ALMACENAR . EN IDENTIFICADOR SUBSTRACTION IDENTIFICADOR RESTA NUMERO PUNTO_Y_COMA
    (26) resta_statement -> ALMACENAR . EN IDENTIFICADOR SUBSTRACTION NUMERO RESTA NUMERO PUNTO_Y_COMA
    (27) product_statement -> ALMACENAR . EN IDENTIFICADOR PRODUCTO IDENTIFICADOR POR IDENTIFICADOR PUNTO_Y_COMA
    (28) product_statement -> ALMACENAR . EN IDENTIFICADOR PRODUCTO NUMERO POR IDENTIFICADOR PUNTO_Y_COMA
    (29) product_statement -> ALMACENAR . EN IDENTIFICADOR PRODUCTO IDENTIFICADOR POR NUMERO PUNTO_Y_COMA
    (30) product_statement -> ALMACENAR . EN IDENTIFICADOR PRODUCTO NUMERO POR NUMERO PUNTO_Y_COMA
    (31) division_statement -> ALMACENAR . EN IDENTIFICADOR DIVISION IDENTIFICADOR DIVISION IDENTIFICADOR PUNTO_Y_COMA
    (32) division_statement -> ALMACENAR . EN IDENTIFICADOR DIVISION NUMERO DIVISION IDENTIFICADOR PUNTO_Y_COMA
    (33) division_statement -> ALMACENAR . EN IDENTIFICADOR DIVISION IDENTIFICADOR DIVISION NUMERO PUNTO_Y_COMA
    (34) division_statement -> ALMACENAR . EN IDENTIFICADOR DIVISION NUMERO DIVISION NUMERO PUNTO_Y_COMA

    EN              shift and go to state 32


state 19

    (3) statement_list -> statement_list statement .

    DECLARACION     reduce using rule 3 (statement_list -> statement_list statement .)
    IDENTIFICADOR   reduce using rule 3 (statement_list -> statement_list statement .)
    INT             reduce using rule 3 (statement_list -> statement_list statement .)
    PRESENTAR       reduce using rule 3 (statement_list -> statement_list statement .)
    ALMACENAR       reduce using rule 3 (statement_list -> statement_list statement .)
    $end            reduce using rule 3 (statement_list -> statement_list statement .)


state 20

    (15) variable_declaration -> DECLARACION INT . IDENTIFICADOR NUMERO PUNTO_Y_COMA
    (16) variable_declaration -> DECLARACION INT . IDENTIFICADOR PUNTO_Y_COMA

    IDENTIFICADOR   shift and go to state 33


state 21

    (17) variable_declaration -> DECLARACION FLOAT . IDENTIFICADOR NUMERO PUNTO_Y_COMA

    IDENTIFICADOR   shift and go to state 34


state 22

    (18) variable_declaration -> DECLARACION STRING . IDENTIFICADOR CADENA PUNTO_Y_COMA

    IDENTIFICADOR   shift and go to state 35


state 23

    (37) condition -> INT IDENTIFICADOR . IGUAL IGUAL NUMERO

    IGUAL           shift and go to state 36


state 24

    (39) assignment_statement -> IDENTIFICADOR IGUAL . NUMERO
    (40) assignment_statement -> IDENTIFICADOR IGUAL . IDENTIFICADOR MAS IDENTIFICADOR
    (42) condition_statement -> IDENTIFICADOR IGUAL . IGUAL NUMERO
    (38) condition -> IDENTIFICADOR IGUAL . IGUAL NUMERO

    NUMERO          shift and go to state 39
    IDENTIFICADOR   shift and go to state 37
    IGUAL           shift and go to state 38


state 25

    (45) increment_statement -> IDENTIFICADOR MAS . MAS

    MAS             shift and go to state 40


state 26

    (41) condition_statement -> IDENTIFICADOR MENOR_IGUAL . NUMERO

    NUMERO          shift and go to state 41


state 27

    (43) condition_statement -> IDENTIFICADOR MAYOR . NUMERO

    NUMERO          shift and go to state 42


state 28

    (44) condition_statement -> IDENTIFICADOR MAYOR_IGUAL . NUMERO

    NUMERO          shift and go to state 43


state 29

    (46) increment_statement -> IDENTIFICADOR MAS_IGUAL . NUMERO

    NUMERO          shift and go to state 44


state 30

    (35) print_statement -> PRESENTAR IDENTIFICADOR . EN CONSOLA PUNTO_Y_COMA

    EN              shift and go to state 45


state 31

    (36) print_statement -> PRESENTAR EN . CONSOLA CADENA PUNTO_Y_COMA

    CONSOLA         shift and go to state 46


state 32
